# gd

./: .gitignore  .gitmodules  pyproject.toml  quickstart.py  setup.py
ggrdr/: __main__.py  auth.py
ggrdr/data/: completion.bash
